class Bag {
    constructor(weight) {
        this.weight = weight
    }
    static getWeight() {
        return this.weight
    }
}

module.exports = Bag